--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ transformers
 pandas
 tqdm
 underthesea
-pytorch
-torchaudio 
-pytorch-cuda==11.6
+
+# pytorch extra index
+torch==1.7.1+cu101
+torchvision==0.8.2+cu101
+torchaudio==0.7.2
+
