--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,6 @@ pandas
 tqdm
 underthesea
 
-# pytorch extra index
-torch==1.7.1+cu101
-torchvision==0.8.2+cu101
-torchaudio==0.7.2
-
+torch
+torchvision
+torchaudio
